fix card footer spacing, fix nugs releases not loading due to missing release dates

--- a/databruce/static/databruce/css/new_style.css
+++ b/databruce/static/databruce/css/new_style.css
@@ -186,6 +186,10 @@ a:link,
     display: flex !important;
     align-items: center !important;
     justify-content: space-between !important;
+}
+
+.card-header,
+.card-footer:not(#eventInfoFooter) {
     padding: 0.35rem 0.75rem !important;
 }
 
